webserver/base/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-openshift
  labels:
    app: hello-openshift
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-openshift
  template:
    metadata:
      labels:
        app: hello-openshift
    spec:
      containers:
      - name: hello-openshift
        image: "openshift/hello-openshift"
        ports:
        - containerPort: 8080
          protocol: "TCP"
        resources: {}
        volumeMounts:
        - name: tmp
          mountPath: "/tmp"
        terminationMessagePath: "/dev/termination-log"
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: false
          capabilities: {}
      volumes:
      - name: tmp
        emptyDir: {}
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      serviceAccount: ""
