webserver/base/hello-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-openshift
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: hello-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
